<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.priyanshrastogi.mysnu_lnf.AddNewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_title"
            android:layout_marginTop="15dp"
            android:id="@+id/title_add"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="text"
            android:minLines="1"
            android:maxLines="1"
            android:hint="@string/add_title_hint"
            style="@style/EditFieldStyle"
            android:id="@+id/post_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_disc"
            android:layout_marginTop="15dp"
            android:id="@+id/disc_add"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:minLines="5"
            android:maxLines="5"
            android:gravity="start"
            android:hint="@string/add_disc_hint"
            style="@style/EditFieldStyle"
            android:id="@+id/post_disc"/>

    </LinearLayout>

    <Button
        android:text="@string/post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="102dp"
        android:layout_marginRight="102dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:id="@+id/postbutton"
        android:background="@color/colorPrimary"/>

</LinearLayout>
